code re-format changes